fix spacing at file upload box

--- a/sass/form/_form_layout.scss
+++ b/sass/form/_form_layout.scss
@@ -115,6 +115,7 @@ form { @include naked(); }
 		padding: 6px 10px;
 		border-radius: 3px;
 		border: 1px solid #666666;
+		margin-right: .5em;
 	}
 
 	textarea {
